Fix font size for footer and alignement

--- a/footie_scores/webapp/static/styles.css
+++ b/footie_scores/webapp/static/styles.css
@@ -137,6 +137,7 @@ body {
 }
 
 .time-footer {
+    font-size: 10px;
     position: absolute;
     bottom: 0;
 }
